fix gap

--- a/subwebsites/team/team_style.css
+++ b/subwebsites/team/team_style.css
@@ -60,8 +60,7 @@ hr {
 }
 
 .column {
-	margin: 5%;
-	margin-top: 100px;
+	margin: 5% 5% 0% 5%;
 	display: inline-flex;
 	flex-wrap: wrap;
 	opacity: 0.9;
